tests/tooling/fixtures/native/recovery/negative/negative_binary_literal_parser_invalid_uppercase_literal.objc3
// Expected diagnostic code(s): O3P103.
module NegativeBinaryLiteralParserInvalidUppercaseLiteral;

let value = 0B;

fn main() -> i32 {
  return 0;
}
